cmake_minimum_required(VERSION 3.20)
project(cpp_complicated_moments)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp_complicated_moments main.cpp Homework1/Person.cpp Homework1/Person.h Homework1/PhoneNumber.cpp Homework1/PhoneNumber.h Homework1/PhoneBook.cpp Homework1/PhoneBook.h  Homework8/Task1/CunitExceptionFormatter.h Homework8/Task1/AssertFailedException.cpp Homework8/Task1/AssertFailedException.h Homework8/Task1/CUnit.cpp Homework8/Task1/CUnit.h)
